<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- This allows you to show which list item is currently selected. -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_item_nature"
            android:icon="@drawable/ic_landscape_black_24dp"
            android:title="@string/drawer_menu_nature"
            android:checked="true"/>
        <item
            android:id="@+id/drawer_item_people"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/drawer_menu_people" />
        <item
            android:id="@+id/drawer_item_textures"
            android:icon="@drawable/ic_casino_black_24dp"
            android:title="@string/drawer_menu_textures" />
        <item
            android:id="@+id/drawer_item_animals"
            android:icon="@drawable/ic_pets_black_24dp"
            android:title="@string/drawer_menu_animals" />
        <item
            android:id="@+id/drawer_item_personal"
            android:icon="@drawable/ic_collections_black_24dp"
            android:title="@string/drawer_menu_personal" />
    </group>

</menu>